# odoo

./: Cargo.toml
odoo-app/: Cargo.toml
odoo-app/src/: main.rs
odoo-client/: Cargo.toml
odoo-client/src/: client.rs
odoo-core/: Cargo.toml  readme.md
odoo-core/src/: encoder.rs  executor.rs  helpers.rs  key_listeners.rs  key_store.rs  lib.rs  parser.rs
odoo-server/: Cargo.toml
odoo-server/src/: main.rs  server.rs
