[package]
name = "odoo-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listener"
path = "src/listener/bin/main.rs"

[[bin]]
name = "writer"
path = "src/writer/bin/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odoo-core = { path = "../odoo-core" }
odoo-client = { path = "../odoo-client" }
chrono = "0.4.31"
tokio = {version = "1.35.0", features = ["default", "macros", "sync", "rt", "rt-multi-thread", "net", "io-std", "io-util" ]}
pretty_env_logger="0.5.0"
log = "0.4.20"
tokio-serde = {version = "0.8.0", features = ["serde", "cbor", "json", "serde_cbor", "serde_json"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
rand = "0.8.5"