[package]
name = "odoo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odoo-core = { path = "../odoo-core" }
dashmap = "5.5.3"
xxhash-rust = {version = "0.8.7", features = ["xxh3", "const_xxh3"]}
chrono = "0.4.31"
tokio = {version = "1.35.0", features = ["default", "macros", "sync", "rt", "rt-multi-thread", "net", "io-std", "io-util" ]}
crossbeam = "0.8.2"
pretty_env_logger="0.5.0"
log = "0.4.20"
bytes = { version = "1.5.0", features = ["serde"] }
tokio-serde = {version = "0.8.0", features = ["serde", "cbor", "json", "serde_cbor", "serde_json"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }